--- a/Instagrid v2/InstaGrid/InstaGrid/Info.plist
+++ b/Instagrid v2/InstaGrid/InstaGrid/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Nous avons besoin d&apos;accéder à votre galerie de photos pour choisir une image à afficher.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>ThirstySoftRegular</string>
